HelloUltraviolet/Fixtures/RejectedSource/Procedures/VerificationFactNoRuntimeRepresentation/Expected.uv
//! Expected diagnostic metadata for the VerificationFactNoRuntimeRepresentation rejected-source specimen.

expectedDiagnostic("E-MOD-1301", "req.15.VerificationFactsNoRuntimeRepresentation")
